style: fix fonts on safari browser

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,41 +1,44 @@
 @font-face {
     font-family: UEFASupercup;
-    src: url(/fonts/UEFASupercup-Bold.ttf);
+    src: url(/fonts/UEFASupercup-Bold.ttf) format('truetype');
     font-weight: 500;
     font-display: swap;
 }
 
 @font-face {
     font-family: UEFASupercup;
-    src: url(/fonts/UEFASupercup-Regular.ttf);
+    src: url(/fonts/UEFASupercup-Regular.ttf) format('truetype');
     font-weight: 400;
     font-display: swap;
 }
 
 @font-face {
     font-family: UEFASupercup;
-    src: url(/fonts/UEFASupercup-Light.ttf);
+    src: url(/fonts/UEFASupercup-Light.ttf) format('truetype');
     font-weight: 300;
     font-display: swap;
 }
 
 @font-face {
     font-family: UEFAEuro;
-    src: url(/fonts/uefaeuro-bold.woff2);
+    src: url(/fonts/uefaeuro-bold.woff2) format('woff2');
+    src: url(/fonts/uefaeuro-bold.ttf) format('truetype');
     font-weight: 500;
     font-display: swap;
 }
 
 @font-face {
     font-family: UEFAEuro;
-    src: url(/fonts/uefaeuro-medium.woff2);
+    src: url(/fonts/uefaeuro-medium.woff2) format('woff2');
+    src: url(/fonts/uefaeuro-medium.ttf) format('truetype');
     font-weight: 400;
     font-display: swap;
 }
 
 @font-face {
     font-family: UEFAEuro;
-    src: url(/fonts/uefaeuro-book.woff2);
+    src: url(/fonts/uefaeuro-book.woff2) format('woff2');
+    src: url(/fonts/uefaeuro-book.ttf) format('truetype');
     font-weight: 300;
     font-display: swap;
 }
@@ -43,6 +46,7 @@
 $primaryColor: #16002b;
 
 html {
+    font-family:  UEFAEuro, Helvetica Neue, Helvetica, Arial, sans-serif;
     -webkit-overflow-scrolling: touch;
     background-color: "#16002b";
 
